fix overlapping of content in #works div

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ html {
 
 nav {
   padding-bottom: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+nav i {
+  padding-left: 100px;
 }
 
 ul {
@@ -24,6 +30,8 @@ li {
 .logo {
   font-weight: bolder;
   color: #42526e;
+  text-align: center;
+  padding-left: 20px;
 }
 
 a {
@@ -85,20 +93,21 @@ section {
   justify-content: center;
 }
 
-#wrapper {
+/* #wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-}
+} */
 
-body {
+body main {
   font-family: 'Inter', sans-serif;
   background-image: url(Header-llustration-desktop@2x.png);
   background-size: cover;
   background-color: white;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
+  background-position: center;
 }
 
 .social {
@@ -111,14 +120,14 @@ body {
   flex: 1;
 }
 
-footer {
+#footer {
   height: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-footer button {
+#footer button {
   margin-top: 30px;
   border-radius: 50%;
   width: 40px;
@@ -133,7 +142,7 @@ footer button {
   color: #172b4d;
   width: 327px;
   height: 97px;
-  padding-top: 3800px;
+  /* padding-top: 3800px; */
   padding-bottom: 36px;
   font-weight: 700;
   font-size: 40px;
@@ -171,7 +180,7 @@ footer button {
 
 .img .cardFooter {
   width: 327px;
-  height: 222px;
+  height: 208px;
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -333,7 +342,7 @@ footer button {
 
 .img1 {
   width: 300px;
-  height: auto;
+  height: 270px;
   align-self: center;
   padding: 35px;
   border-radius: 3em;
@@ -394,7 +403,7 @@ footer button {
   width: 60px;
   height: auto;
   margin-top: 14px;
-  margin-left: 2px;
+  margin-left: 10px;
 }
 
 .card1 .skills {
@@ -439,6 +448,12 @@ footer button {
   line-height: 32px;
   text-align: center;
   color: #344563;
+}
+
+#worksSkills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* MEDIA QUERIES */
@@ -508,7 +523,7 @@ footer button {
 }
 
 @media all and (max-width: 485px) {
-  footer {
+  #footer {
     height: 35vh;
     display: flex;
     flex-direction: column;
@@ -528,7 +543,7 @@ footer button {
     letter-spacing: 0.37px;
   }
 
-  footer ul {
+  #footer ul {
     padding-top: 70px;
     padding-bottom: 0;
     margin-top: 0;
@@ -540,12 +555,14 @@ footer button {
 }
 
 @media all and (max-width: 1100px) {
-  body {
+  body main {
     font-family: 'Inter', sans-serif;
     background-image: url(Header-llustration-desktop@2x.png);
     background-size: 200%;
     background-color: white;
     background-repeat: no-repeat;
     background-position: center;
+    background-position-y: 100px;
   }
 }
+
